--- a/core/templates/core/code_verification.html
+++ b/core/templates/core/code_verification.html
@@ -1,14 +1,38 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-<h2>Account Verification</h2>
-<form action="" method="POST">
-    {% csrf_token %}
-    <div>
-        <label for="">Code:</label>
-        <input type="number" name="code" placeholder="Enter Verification code" required>
-    </div>
 
-    <input type="submit" value="Verify">
-</form>
-{% endblock content %}
+  <main class="main-content">
+    <div class="page-header align-items-start mt-0 pb-11 m-3 border-radius-lg">
+    </div>
+    <div class="container">
+      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+        <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
+          <div class="card z-index-0">
+            <div class="card-header text-center pt-4">
+              <h5>Reset Password</h5>
+              <h6>LOGO</h6>
+            </div>
+            
+            <div class="card-body">
+              <form role="form" method="POST">
+                {% csrf_token %}
+                
+                <div class="form-floating mb-3">
+                    <input type="number" name="code" class="form-control" id="floatingInputDisabled" placeholder="Code" required>
+                    <label for="floatingInputDisabled">CODE:</label>
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Verify</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+ 
+  {% endblock content %}
