--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -2,141 +2,137 @@
 {% load static %}
 
 {% block content %}
-  <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
-    <div class="sidenav-header">
-      <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" href="{% url 'home' %}" target="_blank">
-        <img src="{% static 'img/logo-ct-dark.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold">LOGO</span>
+  <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 "
+  id="sidenav-main">
+ 
+  <hr class="horizontal dark mt-0">
+
+  <!-- profile start -->
+  <div class="d-flex flex-column">
+    <div class="d-flex justify-content-evenly">
+      <a href="{{user_profile.image.url}}">
+        <img src="{{user_profile.image.url}}" class="img-fluid rounded-circle" style="width: 200px; height: 200px;">
       </a>
     </div>
-    <hr class="horizontal dark mt-0">    
-    
-    <!-- profile start -->
-    <div class="d-flex flex-column">
-        <div class="d-flex justify-content-evenly">
-          <a href="{{user_profile.image.url}}">
-            <img src="{{user_profile.image.url}}" class="img-fluid rounded-circle" style="width: 210px; height: 210px;">
-          </a>
-        </div>
-          <div class="d-flex justify-content-evenly">
-              <h4 class="fs-4">{{user_profile.user.username}}</h4>
-          </div>
-          
-          <div class="d-flex justify-content-evenly mt-1 text-center">
-            <form action="{% url 'followunfollow' %}" method="POST">
-              {% csrf_token %}
-              {% if request.user.username != user_profile.user.username %}
-                <input type="hidden" value="{{request.user.username}}" name="follower">
-                <input type="hidden" value="{{user_profile.user.username}}" name="user_being_followed">
-              {% if following %}
-                <button type="submit" class="text-primary btn btn-light">Unfollow</button>
-                <a href="{% url 'message' user_profile.user.username %}" class="text-primary btn btn-light">Message</a>
-              {% else %}
-                <button type="submit" class="text-primary btn btn-light">Follow</button>
-              {% endif %}
-              {% endif %}
-            </form>
-          </div>
-          <div class="d-flex justify-content-evenly mt-1 text-center">
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-atom"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-          </div>
+    <div class="d-flex justify-content-evenly">
+      <h4 class="fs-4 text-uppercase">{{user_profile.user.username}}</h4>
     </div>
-    <!-- profile end -->
-    <hr class="horizontal dark mt-0"> 
+
+    <div class="d-flex justify-content-evenly mt-1 text-center">
+      <form action="{% url 'followunfollow' %}" method="POST">
+        {% csrf_token %}
+        {% if request.user.username != user_profile.user.username %}
+        <input type="hidden" value="{{request.user.username}}" name="follower">
+        <input type="hidden" value="{{user_profile.user.username}}" name="user_being_followed">
+        {% if following %}
+        <button type="submit" class="text-primary btn btn-light">Unfollow</button>
+        <a href="{% url 'message' user_profile.user.username %}" class="text-primary btn btn-light">Message</a>
+        {% else %}
+        <button type="submit" class="text-primary btn btn-light">Follow</button>
+        {% endif %}
+        {% endif %}
+      </form>
+    </div>
+    <div class="d-flex justify-content-evenly mt-1 text-center">
+      <a href="#"><i class="fa fa-twitter"></i></a>
+      <a href="#"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-instagram"></i></a>
+      <a href="#"><i class="fa fa-atom"></i></a>
+      <a href="#"><i class="fa fa-linkedin"></i></a>
+    </div>
+  </div>
+  <!-- profile end -->
+  <hr class="horizontal dark mt-0">
 
 
-    <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
-        <ul class="navbar-nav pe-2 d-flex align-items-center">
-          {% if user_profile.bio %}
-            <li class="nav-item">
-              <a class="nav-link active " href="#">
-                <div
-                  class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                  <i class="fa fa-user text-success text-sm opacity-10"></i>
-                </div>
-            
-                <button type="button" class="btn btn-lg bg-gradient-light" data-bs-trigger="focus" data-bs-toggle="popover"
-                  data-bs-title="{{user_profile.user.username}}" data-bs-content="{{user_profile.bio}} I live in {{user_profile.location}}">
-                  <span class="nav-link-text ms-1">About</span>
-                </button>
-              </a>
-            </li>
-          {% endif %}
+  <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
+    <ul class="navbar-nav pe-2 d-flex align-items-center">
+      {% if user_profile.bio %}
+      <li class="nav-item">
+        <a class="nav-link " href="#" data-bs-trigger="focus" data-bs-toggle="popover"
+        data-bs-title="{{user_profile.user.username}}"
+            data-bs-content="{{user_profile.bio}} I live in {{user_profile.location}}">
+          <div
+            class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="fa fa-user text-success text-sm opacity-10"></i>
+          </div>
 
-          <li class="nav-item">
-            <a class="nav-link active " href="{% url 'uploadpost' %}">
-              <div
-                class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                <i class="ni ni-album-2 text-success text-sm opacity-10"></i>
-              </div>
-              <span class="nav-link-text ms-1">Upload Post</span>
-            </a>
-          </li>
-          {% if followers_count > 0 %}
-            <li class="nav-item">
-              <a class="nav-link " href="{% url 'followers-list' user_profile.user.username %}">
-                <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                  <i class="ni ni-favourite-28 text-warning text-sm opacity-10"></i>
-                </div>
-                  <span class="nav-link-text ms-1 d-flex justify-content-between">Followers 
-                    <div class="circle bg-gradient-success">
-                      <span class="number text-dark">{{followers_count}}</span>
-                    </div>
-                </span>
-              </a>
-            </li>
-          {% else %}
-            <li class="nav-item">
-              <a class="nav-link " href="#">
-                <div
-                  class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                  <i class="ni ni-favourite-28 text-warning text-sm opacity-10"></i>
-                </div>
-                <span class="nav-link-text ms-1 d-flex justify-content-between">Followers
-                  <div class="circle bg-gradient-success">
-                    <span class="number text-dark">{{followers_count}}</span>
-                  </div>
-                </span>
-              </a>
-            </li>
-          {% endif %}
+            <span class="nav-link-text ms-1">About</span>
+        </a>
+      </li>
+      {% endif %}
 
-          {% if following_count > 0 %}
-            <li class="nav-item">
-              <a class="nav-link " href="{% url 'following-list' user_profile.user.username %}">
-                <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                  <i class="ni ni-camera-compact text-success text-sm opacity-10"></i>
-                </div>
-                <span class="nav-link-text ms-1 d-flex justify-content-between">Following 
-                  <div class="circle bg-gradient-success">
-                    <span class="number text-dark">{{following_count}}</span>
-                  </div>
-              </span>
-              </a>
-            </li>
-          {% else %}
-              <li class="nav-item">
-                <a class="nav-link " href="#">
-                  <div
-                    class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                    <i class="ni ni-camera-compact text-success text-sm opacity-10"></i>
-                  </div>
-                  <span class="nav-link-text ms-1 d-flex justify-content-between">Following
-                    <div class="circle bg-gradient-success">
-                      <span class="number text-dark">{{following_count}}</span>
-                    </div>
-                  </span>
-                </a>
-              </li>
-            {% endif %}
-        </ul>
-      </div>
-  </aside>
+      <li class="nav-item">
+        <a class="nav-link " href="{% url 'uploadpost' %}">
+          <div
+            class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="ni ni-album-2 text-success text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Upload Post</span>
+        </a>
+      </li>
+      {% if followers_count > 0 %}
+      <li class="nav-item">
+        <a class="nav-link " href="{% url 'followers-list' user_profile.user.username %}">
+          <div
+            class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="ni ni-favourite-28 text-warning text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1 d-flex justify-content-between">Followers
+            <div class="circle bg-gradient-success">
+              <span class="number text-dark">{{followers_count}}</span>
+            </div>
+          </span>
+        </a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link " href="#">
+          <div
+            class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="ni ni-favourite-28 text-warning text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1 d-flex justify-content-between">Followers
+            <div class="circle bg-gradient-success">
+              <span class="number text-dark">{{followers_count}}</span>
+            </div>
+          </span>
+        </a>
+      </li>
+      {% endif %}
+
+      {% if following_count > 0 %}
+      <li class="nav-item">
+        <a class="nav-link " href="{% url 'following-list' user_profile.user.username %}">
+          <div
+            class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="ni ni-camera-compact text-success text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1 d-flex justify-content-between">Following
+            <div class="circle bg-gradient-success">
+              <span class="number text-dark">{{following_count}}</span>
+            </div>
+          </span>
+        </a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link " href="#">
+          <div
+            class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="ni ni-camera-compact text-success text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1 d-flex justify-content-between">Following
+            <div class="circle bg-gradient-success">
+              <span class="number text-dark">{{following_count}}</span>
+            </div>
+          </span>
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+  </div>
+</aside>
   <main class="main-content position-relative border-radius-lg ">
     <!-- Navbar -->
     <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur"
@@ -367,12 +363,14 @@
         <div class="col">
           <div class="p-3 post-item">
             {% if post.get_file_type == 'image' %}
-            <a href="#">
+            <a href="{% url 'profileposts' post.author.username post.id %}">
+              <span class="mt-5">Image</span>
               <img src="{{post.file.url}}" class="img-fluid rounded" alt="Image 1">
             </a>
             {% elif post.get_file_type == 'video' %}
-            <a href="#">
-              <video controls class="img-fluid rounded" alt="Image 1">
+            <a href="{% url 'profileposts' post.author.username post.id %}">
+              <span class="mt-5">Video</span>
+              <video class="img-fluid rounded" alt="Image 1">
                 <source src="{{ post.file.url }}" type="video/mp4">
               </video>
             </a>
