--- a/core/templates/core/profileposts.html
+++ b/core/templates/core/profileposts.html
@@ -2,57 +2,17 @@
 {% load static %}
 
 {% block content %}
-<aside
-      class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4"
-      id="sidenav-main"
-    >
-      <div class="sidenav-header">
-        <i
-          class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
-          aria-hidden="true"
-          id="iconSidenav"
-        ></i>
-        <a
-          class="navbar-brand m-0"
-          href="{% url 'home' %}"
-          target="_blank"
-        >
-          <img
-            src="{% static 'img/logo-ct-dark.png' %}"
-            class="navbar-brand-img h-100"
-            alt="main_logo"
-          />
-          <span class="ms-1 font-weight-bold">LOGO</span>
-        </a>
-      </div>
-      <hr class="horizontal dark mt-0" />
-      <span class="ms-1 font-weight-bold">Suggested For You</span>
 
-      {% for user, profile in suggested_users %}
-      <li class="nav-item dropdown pe-2 d-flex align-items-center">
-        <a href="{% url 'profile' profile.user %}" style="text-decoration: none;">
-          <img
-            src="{{ profile.image.url }}"
-            class="avatar avatar-lg me-3 mx-auto p-2"
-          />
-          <span class="font-weight-bold">{{profile.user}}</span>
-        </a>
-      </li>
-      {% endfor %}
-      
-
-</aside>
-    <main class="main-content position-relative border-radius-lg">
-      
-      <!-- Navbar -->
-      <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur"
+  <main class="main-content position-relative border-radius-lg ">
+    <!-- Navbar -->
+    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur"
       data-scroll="false">
       <div class="container-fluid py-1 px-3">
         <div class="d-flex justify-content-between align-items-center w-100">
           <!-- Logo (Far Left) -->
-          <a class="navbar-brand" href="{% url 'home' %}">
+          <a class="navbar-brand" href="{{request.META.HTTP_REFERER}}">
             <!-- <img src="your-logo.png" alt="Logos"> -->
-            LOGO HERE
+            <i class="ni ni-bold-left"></i>
           </a>
     
           <!-- User Profile and Notification (Far Right) -->
@@ -244,24 +204,76 @@
               </ul>
             </li>
             <!-- Notification end -->
-
-            <!-- Side bar toggler -->
-            <li class="nav-item d-xl-none ps-3 d-flex align-items-center text-dark">
-              <a href="javascript:;" class="nav-link text-dark p-0" id="iconNavbarSidenav">
-                <div class="sidenav-toggler-inner text-dark">
-                  <i class="sidenav-toggler-line bg-gradient-dark"></i>
-                  <i class="sidenav-toggler-line bg-gradient-dark"></i>
-                  <i class="sidenav-toggler-line bg-gradient-dark"></i>
-                </div>
-              </a>
-            </li>
+            <!-- dark them -->
           </ul>
         </div>
       </div>
     </nav>
-      <!-- End Navbar -->
+    <!-- End Navbar -->
 
-          <!-- Post feed -->
+<!-- individual posts -->
+            <div class="container mt-4">
+              <div class="row justify-content-center">
+                <div class="col-10 col-md-6 text-center">
+                  <div class="d-flex justify-content-between align-items-center mb-2">
+                    <a href="{% url 'profile' post.author %}">@{{post.author}}</a>
+                    <span class="text-secondary">{{ post.date_posted }}</span>
+                  </div>
+                  {% if post.get_file_type == 'image' %}
+                    <a href="{{post.file.url}}"><img src="{{post.file.url}}" class="img-fluid rounded" alt="post"></a>
+                  {% elif post.get_file_type == 'video' %}
+                    <video controls width="300" height="300">
+                      <source src="{{ post.file.url }}" type="video/mp4">
+                    </video>
+                  {% else %}
+                    <p>No file uploaded or unsupported file type.</p>
+                  {% endif %}
+                  <div class="d-flex justify-content-between align-items-center mb-2">
+                    {% if post.no_of_likes == 0 %}
+                      <a href="{% url 'likepost' %}?post_id={{post.id}}"><i class="fa fa-diamond cursor-pointer text-primary"> <small>Like</small></i></a>
+                      <a href="{% url 'comment' post.id %}"><i class="fa fa-comment cursor-pointer text-primary"> <small>Comment</small></i></a>
+                      <small class="text-primary">No like</small>
+                      <a href="{{post.image.url}}" download><i class="fa fa-download cursor-pointer text-primary"></i></a>
+                    {% elif post.no_of_likes == 1 %}
+                      <a href="{% url 'likepost' %}?post_id={{post.id}}"><i class="fa fa-diamond cursor-pointer text-primary">
+                          <small>Like</small></i></a>
+                      <a href="{% url 'comment' post.id %}"><i class="fa fa-comment cursor-pointer text-primary"> <small>Comment</small></i></a>
+                          <small class="text-primary">{{post.no_of_likes}} person liked this post</small>
+                      <a href="{{post.image.url}}" download><i class="fa fa-download cursor-pointer text-primary"></i></a>
+                    {% else %}
+                        <a href="{% url 'likepost' %}?post_id={{post.id}}"><i class="fa fa-diamond cursor-pointer text-primary">
+                            <small>Like</small></i></a>
+                        <a href="{% url 'comment' post.id %}"><i class="fa fa-comment cursor-pointer text-primary"> <small>Comment</small></i></a>
+                            <small class="text-primary" >{{post.no_of_likes}} people liked this post</small>
+                        <a href="{{post.image.url}}" download><i class="fa fa-download cursor-pointer text-primary"></i></a>
+                    {% endif %}
+                      </div>
+                      <div class="d-flex justify-content-start">
+                        <small>{{ post.caption }}</small>
+                      </div>
+                      
+                        {% with latest_comment=post.comment_set.latest %}
+                          {% if latest_comment %}
+                            <div class="d-flex justify-content-start">
+                              <a class="text-decoration-none" href="{% url 'comment' post.id %}">
+                                {{ latest_comment.content }}
+                              </a>
+                            </div>
+                            {% if post.comment_set.count > 1 %}
+                              <div class="d-flex justify-content-start">
+                                <a class="text-decoration-none" href="{% url 'comment' post.id %}">
+                                  view {{ post.comment_set.count|add:"-1" }} more comments
+                                </a>
+                              </div>
+                            {% endif %}
+                          {% endif %}
+                        {% endwith %}
+                </div>
+              </div>
+            </div>
+    <!-- end individual posts -->
+
+    <!-- Post feed -->
           {% for post in page_obj %}
             <div class="container mt-4">
               <div class="row justify-content-center">
@@ -325,6 +337,7 @@
             </div> 
           {% endfor %}
           <!-- Post feed end -->
-    </main>
-   {% endblock content %}
-</html>
+  </main>
+
+
+{% endblock content %}
